tests/spec/fail/kostroutine_target_not_function.aja
n = 1
kostroutine n()
